0.56   2010-06-26

- Added mention of end-of-month algorithms to docs on DateTime math. Based on
  a patch by Michael R. Davis. RT #58533.

- License is now Artistic 2.0.


0.55   2010-03-16

- Get all tests passing on 5.6.2. Thanks to Zefram for help spotting the
  problems.

- Moved code to my hg repo at http://hg.urth.org/hg/DateTime.pm.


0.54   2010-03-14

- Bumped the DateTime::TimeZone prereq to 1.09 to force people to use a modern
  version. Previously the minimum version was 0.59, and there have been a lot
  of bug fixes since then.

- String overloading now extends to string comparison, so a DateTime object
  can be compared to any string. In other words

  if ( $dt eq $string ) { ... }

  will simply stringify $dt and then do a normal string-is-equals
  check. Previously, this would blow up unless both operands were a DateTime
  object.

  Note that future versions of Test::More (0.95_01+) will no longer stringify
  arguments to is(), which means that older versions of DateTime may cause new
  test failures when you upgrade Test::More. It is highly recommended that you
  upgrade DateTime before upgrading to Test::More 0.95_01+.

  Patch by Michael Schwern. RT #55453.

- Allow passing end_of_month setting to $duration->inverse(). Requested by
  John Siracusa. RT #53985.


0.53   2009-12-06

- Added Test::Exception to build_requires.


0.52   2009-12-05

- Numeric to ->new() are now all validated to make sure they are
  integers. Previously, things like "month => 11.2" would have been
  allowed. Based on a bug report from Max Kanat-Alexandar. RT #45767.

- Added a warning to the docs suggesting that you cache the locale time zone
  if you need to make many DateTime objects in the local zone. Looking up the
  local zone can be fairly expensive. RT #46753.


0.51   2009-11-01

- Switched to Module::Build. To force a non-XS build, start the build
  process with "perl Build.PL --pp".

- POD-related tests are only run for the maintainer now.
